--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Login</h1>
-    git add .
-    git commit -m "Criando página de login"
-    git push
+    <div id="container">
+        <label for="usuario">Nome de usuário</label>
+        <input id="usuario" type="text">
+        <label for="senha">Senha</label>
+        <input id="senha" type="text">
+        <button> Entrar</button>
+    </div>
+    <!-- <h1>Login</h1> -->
+    <!-- git add . -->
+    <!-- git commit -m "Criando página de login" -->
+    <!-- git push -->
+
+    <!-- git config user.name "pedroking2310" -->
+    <!-- git config user.email "pedro.ctvcking@gmail.com" -->
 </body>
 </html>
